---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-08-03
  Bugfixes:
    - Description fix in locale.

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-08-03
  Features:
    - Initial release