@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed load error when "space_travel" feature flag is on.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2025-08-03
